index all has been done！

--- a/styles/BambooGreen/main.css
+++ b/styles/BambooGreen/main.css
@@ -68,3 +68,16 @@
 #statustable{
     height: 690px;
 }
+
+.kas{
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+}
+.shoutrow{
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+}
