upload has done!

--- a/styles/BambooGreen/theme1.css
+++ b/styles/BambooGreen/theme1.css
@@ -1142,3 +1142,12 @@ button, input, optgroup, select, textarea {
 /*a:hover{*/
     /*text-decoration: none;*/
 /*}*/
+
+#compose tr td{
+    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #333;
+    /*text-align: center;*/
+}
+
