控制面板完成，删除了个人设置网站的导航栏，并且禁用了该功能。 整体页面不是很好看，后期需要再修改。

--- a/styles/BambooGreen/theme1.css
+++ b/styles/BambooGreen/theme1.css
@@ -1189,3 +1189,27 @@ b{
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 15px;
 }
+
+.nav-settings-item{
+    font-size: 15px;
+    font-family: "ff-tisa-web-pro-1", "ff-tisa-web-pro-2", "Lucida Grande", "Helvetica Neue", Helvetica, Arial, "Hiragino Sans GB", "Hiragino Sans GB W3", "Microsoft YaHei UI", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
+}
+
+#usercpnav{
+    margin-left: 30%;
+    margin-bottom: 25px;
+}
+
+.rowfollow{
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 15px;
+}
+
+
+.small{
+    color: tomato;
+}
+
+.nowrap{
+    font-size: 17px;
+}
