--- a/styles/BambooGreen/theme1.css
+++ b/styles/BambooGreen/theme1.css
@@ -1240,3 +1240,8 @@ td .text{
     font-size: 15px;
     color: goldenrod;
 }
+
+.loginreg {
+    font-family:"Microsoft YaHei";
+    font-size: 20px;
+}
