index 页面重新布局，添加论坛动态，最近种子，经典资源，用户排行榜 删除趣味盒

--- a/styles/BambooGreen/theme1.css
+++ b/styles/BambooGreen/theme1.css
@@ -1287,3 +1287,9 @@ td .text{
     font-size: 72px;
     color: black;
 }
+
+.links-blue{
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    color: #337ab7;
+}
