首页调整没问题，但是其他的页面的排版出问题了。

--- a/styles/BambooGreen/theme1.css
+++ b/styles/BambooGreen/theme1.css
@@ -1341,3 +1341,9 @@ td .text{
     font-family: sans-serif;
     font-size: 16px;
 }
+
+.container {
+    min-width: 1333px;
+    width: 100%;
+    max-width: 1353px;
+}
