1.页面调整与蒲公英底层布局颜色相同 2.修复控制面板的大部分信息无法显示的问题 3.引入com框架，优化了部分界面效果 4.修改了求种页面 5.调整种子页面的分类选择 6.调整首页对话框，更新的消息显示在最下面 7.详情页优化

--- a/styles/BambooGreen/theme1.css
+++ b/styles/BambooGreen/theme1.css
@@ -1337,6 +1337,11 @@ td .text{
     font-size:17px;
 }
 
+.icon-red {
+    color: tomato;
+    font-size: 17px;
+}
+
 .sans{
     font-family: sans-serif;
     font-size: 16px;
@@ -1346,4 +1351,14 @@ td .text{
     min-width: 1333px;
     width: 100%;
     max-width: 1353px;
+}
+
+/*.vtop{*/
+    /*background-color: #00c9c9;*/
+    /*border-radius: 3px;*/
+/*}*/
+
+.icon-greenbig{
+    color: #3CB371;
+    font-size: 25px;
 }
