1.修改了排行榜 2.修改管理组 3.邀请页面 4.魔力值页面 5.管理员信箱

--- a/styles/BambooGreen/theme1.css
+++ b/styles/BambooGreen/theme1.css
@@ -1362,3 +1362,9 @@ td .text{
     color: #3CB371;
     font-size: 25px;
 }
+
+.text{
+    font-family: \"Helvetica Neue\", Helvetica, Arial, sans-serif;
+    font-size: 14px;
+    line-height: 1.4;
+}
