导航栏以及状态栏合并完成初步

--- a/styles/BambooGreen/main.css
+++ b/styles/BambooGreen/main.css
@@ -89,3 +89,14 @@
 link:focus{
     outline: none;
 }
+
+#navbg{
+    background-color: rgba(0, 0, 0, 0.6);;
+    width: 1303px;
+    margin: 0 auto;
+}
+
+#navicon{
+    font-size: 17px;
+    margin-left: 60px;
+}
