事务，首页修改完成 还有部分bug没有解决 bug反馈： 1.群聊区聊天 2.chrome无法滚动 3.聊天区没有引用功能

--- a/styles/BambooGreen/main.css
+++ b/styles/BambooGreen/main.css
@@ -100,3 +100,19 @@ link:focus{
     font-size: 17px;
     margin-left: 60px;
 }
+
+.indexicon{
+    font-size: 20px;
+}
+
+.footer {
+    color: #777;
+    padding: 30px 0;
+    border-top: 1px solid #e5e5e5;
+    margin-top: 70px;
+}
+
+#indexmain{
+    margin: 0px auto;
+    padding-top: 10px;
+}
